Added hero component
Added a hero component called hero-ing. Included the hero image within the src/assets folder. Image doesn't display the hero image, but does display the text.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="container-fluid">
+    <div class ="row">
+        <div class = "homeHeroImage">
+            <div class = "heroText">
+                <h1>Welcome to Keyblade Stories</h1>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="panel-home col-sm-5 offset-sm-1">
             <div class="header-text"><h6 class="text-center">Most Recent Stories</h6></div>
