--- a/src/styles.css
+++ b/src/styles.css
@@ -129,6 +129,8 @@ i, span, a {
     background: var(--sidebar-background);
     color: #fff;
     transition: all 0.3s;
+    position: fixed;
+    z-index: 10;
 }
 
 #sidebar.active {
@@ -306,6 +308,30 @@ div.login:nth-child(1) p {
 	width: 100%;
 }
 
+/* ---------------------------------------------------
+    Main Page STYLE
+----------------------------------------------------- */
+.homeHeroImage{
+    background-image: url("/assets/hero.jpg");
+
+    height:50%;
+    width: 100%;
+
+    display:flex;
+
+    background-repeat: no-repeat;
+    background-size:cover;
+    
+    
+}
+.heroText{
+    text-align:center;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate (-50%, -50%);
+    color:black;
+}
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
