--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div id="heroImg"></div>
     <h1 id="heroText">Welcome to Keyblade Stories</h1>
 </div>
-<!--<div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
         <div class="panel-home col-sm-5 offset-sm-1">
             <div class="header-text"><h6 class="text-center">Most Recent Stories</h6></div>
@@ -29,7 +29,7 @@
         <p><strong>Many</strong> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
     </div>
     
-</div>-->
+</div>
 
 
 <router-outlet></router-outlet>
