--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
 /* TODO LIST
 --------------
-- mobile menu button broken
-- main js file not working (menu dropdown)
 
 */
 
@@ -14,7 +12,6 @@
 /* ---------------------------------------------------
     COLOR VARIABLES
 ----------------------------------------------------- */
-
 :root {
     --sidebar-background: rgb(40, 71, 119);
     --sidebar-background-transparent: rgba(40, 71, 119, 0.95);
@@ -28,13 +25,13 @@
     width: 100%;
     display: flex;
     align-items: stretch;
-    
 }
 
 body {
     height: 100% !important;
     font-family: 'Roboto', sans-serif;
     background: #f2f2f2;
+    border: 1px solid black;
 }
 
 p {
@@ -85,7 +82,7 @@ i, span, a {
 
 .has-search .form-control {
     padding-left: 2rem;
-  }
+}
   
 .has-search .form-control-feedback {
     position: absolute;
@@ -101,7 +98,6 @@ i, span, a {
 /* ---------------------------------------------------
     TOP NAV BAR STYLE
 ----------------------------------------------------- */
-
 .navbar {
     padding: 15px 10px;
     background: #fff;
@@ -124,7 +120,6 @@ i, span, a {
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
-
 #sidebar {
     background: var(--sidebar-background);
     color: #fff;
@@ -139,7 +134,6 @@ i, span, a {
     overflow-x: hidden;
     position: fixed;
     z-index: 10;
-
 }
 
 #sidebar.active {
@@ -274,7 +268,6 @@ a.primary:hover, a.secondary:hover {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
-
 #login-bar {
     width: 100%;
     background-color: #b2b2b2;
@@ -310,7 +303,6 @@ div.login:nth-child(1) p {
 /* ---------------------------------------------------
     MOBILE MENU STYLE
 ----------------------------------------------------- */
-
 #sidebar-login-mobile {
     width: 100%;
     position: fixed;
@@ -388,7 +380,6 @@ div.login:nth-child(1) p {
 /* ---------------------------------------------------
     LANDING PAGE STYLE
 ----------------------------------------------------- */
-
 #heroImg:before {
     content: "";
     display: block;
@@ -405,13 +396,12 @@ div.login:nth-child(1) p {
 }
 
 #heroText {
-    text-align:center;
-    position:absolute;
-    top:50%;
-    left:40%;
-    transform:translate (-50%, -50%);
-    color:black;
-    border: 1px solid black;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    transform: translate (-50%, -50%);
+    color: white;
 }
 /* ---------------------------------------------------
     MEDIAQUERIES
