Routing and registration page
Added routing within the app.module.ts and app-routing.module.ts to navigate between pages by /register or /user at the end of localhost.  Pages will be displayed at the body of the mainpage right now. need to find a way to separate the pages.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* TODO LIST
 --------------
-
+--Get the register page to display on a separate page
+--clean up and format the register page to not be covered by sidebar and have it all centered
+--make the select avater into a rounded image that displays the profile pic
 */
 
 /* You can add global styles to this file, and also import other style files */
