--- a/src/app/login-bar/login-bar.component.html
+++ b/src/app/login-bar/login-bar.component.html
@@ -1,28 +1,11 @@
-<div id="content">
+<div id="topNav">
     <!-- Login Bar - Mobile Screen -->
     <div id="sidebar-login-mobile" class="row d-md-none">
-        <div class="col-sm-6">
-            <a onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+        <div class="col-6">
+            <a (click)="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </div>
-        <div class="col-sm-6">
+        <div class="col-6">
             <a class="float-right" href="">LOGIN</a>
         </div>
     </div>
-  
-    <!-- Login Bar - Full Screen -->
-    <div id="login-bar" class="row">
-        <div id="login-btn" class="col-sm-2 login">
-            <a href=""><p>LOGIN</p></a>
-        </div>
-        <div class="col-sm-4 login">
-            <input type="text" class="" ng-model="username" required="" placeholder="&nbsp;username"/>
-        </div>
-        <div class="col-sm-4 login">
-            <input type="password" class="" ng-model="password" required="" placeholder="&nbsp;password"/>
-        </div>
-        <div class="col-sm-1 login">
-            <a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
-        </div> 
-    </div>
-    
   </div>
