Rearranged style rules and components Organized hierarchy Added CSS to registrations

--- a/src/app/login-bar/login-bar.component.html
+++ b/src/app/login-bar/login-bar.component.html
@@ -1,11 +1,11 @@
 <div id="topNav">
     <!-- Login Bar - Mobile Screen -->
-    <div id="sidebar-login-mobile" class="row d-md-none">
-        <div class="col-6">
+    <div id="sidebar-login-mobile" class="row d-lg-none">
+        <div id="login-bars" class="col-6">
             <a (click)="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </div>
-        <div class="col-6">
+        <div id="login-btn" class="col-6">
             <a class="float-right" href="">LOGIN</a>
         </div>
     </div>
-  </div>
+</div>
