--- a/src/app/login-bar/login-bar.component.css
+++ b/src/app/login-bar/login-bar.component.css
@@ -5,7 +5,8 @@
     width: 100%;
     overflow: hidden;
     margin-left: 250px; /* Same as the width of the sidenav */
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 8px;
     transition: all 0.3s;
 }
 
@@ -14,6 +15,10 @@
 ----------------------------------------------------- */
 #sidebar-login-mobile {
     width: 100%;
+}
+
+#login-btn {
+    margin-top: 3px;
 }
 
 @media (max-width: 768px) {
