--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -1,17 +1,38 @@
-.form-wrapper{
-    align-content: center;
-    margin-left: 20%;
-    width:80%;
+#avatar img {
+    border-radius: 50%;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0 auto;
+    box-shadow: 0 10px 6px -6px #777;
 }
-#submit{
-    align-content: center;
-    border-width: 2px;
-    border-radius: 5px;
+
+#avatar {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.row * {
+    padding: 5px;
+}
+
+#registration {
+    background-color: #fff;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    width: 100%;
     margin-top: 10px;
 }
-label{
-    font-weight:bold;
+
+.hr-avatar {
+    background-color: #333;
+    width: 60%;
+    position: relative;
+    bottom: 100px;
+    height: 1px;
 }
-.col-sm-10{
-    width:80%
+
+#submit {
+    margin-top: 10px;
 }
