--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
 /* TODO LIST
 --------------
---Get the register page to display on a separate page
---clean up and format the register page to not be covered by sidebar and have it all centered
---make the select avater into a rounded image that displays the profile pic
+- Hide mobile nav after click
 */
 
 /* You can add global styles to this file, and also import other style files */
@@ -18,159 +16,6 @@
     --sidebar-background: rgb(40, 71, 119);
     --sidebar-background-transparent: rgba(40, 71, 119, 0.95);
     --sidebar-secondary: #3470d1;
-}
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-#sidebar {
-    background: var(--sidebar-background);
-    color: #fff;
-    height: 100%;
-    min-width: 250px;
-    max-width: 250px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    transition: all 0.3s;
-    overflow-x: hidden;
-}
-
-#sidebar ul li a {
-    text-align: left;
-    text-transform: uppercase;
-}
-
-#sidebar .sidebar-header {
-    font-family: 'Major Mono Display', monospace;
-    text-align: center;
-    padding-top: 20px;
-    background: var(--sidebar-background);
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.2em;
-    display: block;
-}
-#sidebar ul li a:hover {
-    color: var(--sidebar-background);
-    background: #fff;
-}
-#sidebar ul li a i {
-    margin-right: 10px;
-}
-
-a[data-toggle="collapse"] {
-    position: hidden;
-}
-
-a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
-    content: '\e259';
-    display: block;
-    position: absolute;
-    right: 20px;
-    font-family: 'Glyphicons Halflings';
-    font-size: 0.6em;
-}
-a[aria-expanded="true"]::before {
-    content: '\e260';
-}
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: var(--sidebar-background);
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.primary {
-    background: #fff;
-    color: #296fbe;
-}
-
-a.primary:hover, a.secondary:hover {
-    background: #014089 !important;
-    color: #fff !important;
-}
-
-.btn-primary {
-    background: var(--sidebar-background);
-    border-color: var(--sidebar-background);
-}
-
-.btn-primary:hover {
-    background: var(--sidebar-secondary);
-    border-color: var(--sidebar-secondary);
-}
-
-/* ---------------------------------------------------
-    MOBILE MENU STYLE
------------------------------------------------------ */
-.overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    background-color: var(--sidebar-background);
-    background-color: var(--sidebar-background-transparent);
-    overflow-x: hidden;
-    transition: 0.5s;
-}
-
-.overlay-content {
-    position: relative;
-    top: 20%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-}
-
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 30px;
-    color: white;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: #aaa9a9;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-
-@media screen and (min-width: 768px) {
-    .overlay {display: none;}
-}
-
-@media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px;}
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
 }
 
 /* ---------------------------------------------------
@@ -234,74 +79,3 @@ i, span, a {
     padding: 20px;
 }
 
-.has-search .form-control {
-    padding-left: 2rem;
-}
-  
-.has-search .form-control-feedback {
-    position: absolute;
-    display: block;
-    width: 2rem;
-    height: 2rem;
-    line-height: 1.7rem;
-    text-align: center;
-    pointer-events: none;
-    color: #aaa;
-}
-
-/* ---------------------------------------------------
-    TOP NAV BAR STYLE
------------------------------------------------------ */
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-#top-nav {
-    padding: 2px;
-}
-
-/* ---------------------------------------------------
-    LANDING PAGE STYLE
------------------------------------------------------ */
-#heroImg:before {
-    content: "";
-    display: block;
-    padding-top: 100%;
-}
-
-#heroImg {
-    background-image: url("assets/hero.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-}
-
-#heroText {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    transform: translate (-50%, -50%);
-    color: white;
-}
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
-@media (max-width: 768px) {
-    #sidebar {
-        display: none;
-    }
-}
