--- a/src/app/story-page/story-page.component.html
+++ b/src/app/story-page/story-page.component.html
@@ -1,3 +1,52 @@
-<p>
-  story-page works!
-</p>
+<div id="story-page" class="container-fluid">
+  <br>
+  <div id="book" class="row">
+
+      <div class="col-sm-5">
+          <img class="img-fluid" src="../assets/bookcover.jpg" alt="book-artwork">
+        <div id="ratings" class="row float-right">
+            <i class="fa fa-thumbs-o-up"> 123</i>
+            <i class="fa fa-thumbs-o-down"> 23</i>
+        </div>
+        
+      </div>
+
+      <div id="book-information" class="col-sm-7">
+        <div class="container">
+          <p class="h4">The Martian</p>
+          <p class="h5">Andy Weir</p>
+          <br>
+          <br>
+          <p class="h6">summary:</p>
+          <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+          </p>
+          <br>
+          <p class="h6">tags:</p>
+          <p>stuff, thriller, action, etc</p>
+          
+        </div>
+      </div>
+
+  </div>
+
+  <div class="row">
+    <p class="text-uppercase font-weight-bold">Chapters</p>
+    <div id="chapters" class="container">
+      <p>CH 1 - Chapter Title</p>
+      <p>CH 2 - Chapter Title</p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="text-uppercase font-weight-bold">Comments</p>
+    <div id="comments" class="container">
+      <div class="comment">
+          <p>Great book! I highly recommend it and everyone should contribute to it.</p>
+          <p>Action pack that builds up a irresistible immersion.</p>
+      </div>
+    </div>
+  </div>
+  <br>
+
+
+</div>
