--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,13 @@
         <h5 class="text-center">Most Liked Stories</h5>
         <hr>
         <p>The Cupid the Reply Changed</p>
-        <p>The Bound Wretched's Dream/p>
+        <p>The Bound Wretched's Dream</p>
         <p>Beast's Apocalypse</p>
     </div>
 </div>
     
 <div class="row">
+    <h5>See what's new!</h5>
     <p><strong>It</strong> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
     <p><strong>Many</strong> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
     <p><strong>It</strong> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
