--- a/src/app/login-bar/login-bar.component.css
+++ b/src/app/login-bar/login-bar.component.css
@@ -5,13 +5,15 @@
     width: 100%;
     overflow: hidden;
     margin-top: 15px;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
     transition: all 0.3s;
 }
 
+/* ---------------------------------------------------
+    SEARCH STYLE
+----------------------------------------------------- */
 .search {
     padding: 5px;
-    border: 1px solid black;
 }
 
 .search input {
@@ -21,8 +23,14 @@
     border-bottom: 1px solid grey;
 }
 
-.search input:focus {
+input:focus {
     outline: none !important;
+}
+
+@media (max-width: 768px) {
+    #desktopSearch {
+        display: none;
+    }
 }
 
 /* ---------------------------------------------------
@@ -32,8 +40,12 @@
     width: 100%;
 }
 
-#login-btn {
-    margin-top: 3px;
+#search * {
+    padding: 0;
+}
+
+#search i {
+    margin-left: 5px;
 }
 
 @media (max-width: 768px) {
