--- a/src/app/login-bar/login-bar.component.html
+++ b/src/app/login-bar/login-bar.component.html
@@ -1,5 +1,5 @@
 <div id="topNav">
-    <div class="row float-right search">
+    <div id="desktopSearch" class="row float-right search">
         <form class="form-inline md-form form-sm active-cyan-2 mt-2 float-right">
             <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
             <i class="fa fa-search" aria-hidden="true"></i>
@@ -8,12 +8,19 @@
 
 
     <!-- Login Bar - Mobile Screen -->
-    <div id="sidebar-login-mobile" class="row d-lg-none">
+    <div id="sidebar-login-mobile" class="row d-md-none">
         <div id="login-bars" class="col-6">
             <a (click)="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </div>
-        <div class="col-6">
-            <a class="float-right" routerLink="/login">LOGIN</a>
+        <div class="col-6 search">
+            <div id="search" class="row">
+                <div class="col-10">
+                    <input class="form-control form-control-sm" type="text" placeholder="Search" aria-label="Search">
+                </div>
+                <div class="col-1">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
+            </div>
         </div>
     </div>
 </div>
