--- a/src/app/login-bar/login-bar.component.html
+++ b/src/app/login-bar/login-bar.component.html
@@ -18,7 +18,7 @@
                     <input class="form-control form-control-sm" type="text" placeholder="Search" aria-label="Search">
                 </div>
                 <div class="col-1">
-                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
