Search result component WIP

--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,32 +1,32 @@
-<div class="container-fluid">
+<div id="top-text" class="container-fluid">
   <div class="row">
-    <div class="col-6 float-left">
-      <p class="text-uppercase">Search Results</p>
+    <div class="col-6">
+      <p class="text-uppercase float-left">Search Results</p>
     </div>
-    <div class="col-6 float-right">
-      <p class="text-uppercase">Filter</p>
-      <i class="fa fa-level-down-alt"></i>
-      
+    <div class="col-6">
+      <p class="text-uppercase float-right">Filter<a href="#"><i class="fa fa-long-arrow-down"></i></a></p>
     </div>
   </div>
 </div>
 
-<div id="results" class="container-fluid">
-  <div class="row">
+<div id="show-results" class="container-fluid">
+  <div class="row results">
     <div class="col-sm-4">
       <img class="img-fluid" src="../assets/bookcover.jpg">
     </div>
     <div class="col-sm-8">
-      <p>The Martian</p>
+      <br>
+      <p class="h5">The Martian</p>
       <p>Andy Weir</p>
       <div class="row float-right">
           <i class="fa fa-thumbs-o-up"> 123</i>
           <i class="fa fa-thumbs-o-down"> 23</i>
       </div>
       <br>
-      <p><strong>summary:</strong></p>
       <br>
-      <p><strong>tags:</strong></p>
+      <p><strong>summary:</strong> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+      <br>
+      <p><strong>tags:</strong> stuff, thriller, action, etc</p>
     </div>
   </div>
 </div>
