Updated create story and chapter pages
updated teh create story and create chapter pages so that the tags appear on the create story page. Create chapter has the title appear as well and the data from both is displayed in the console. Create story also has the cover image input added in. Code taken fromt eh registration page image uploader. Tags are not adding to anything when clicked, but do changed color when pressed.

--- a/src/app/components/create-chapter/create-chapter.component.html
+++ b/src/app/components/create-chapter/create-chapter.component.html
@@ -6,18 +6,16 @@
       <form [formGroup] = "chapterForm" class = "chapter-container" (ngSubmit) ="chapterCreate()">
         <!--Chapter Title-->
         <h5>Title</h5>
-        <!--
-        <p [ngClass]="{ 'has-error': isSubmitted && formControls.chapterTitle.errors }">
-            <input type="text" placeholder="Title" formControlName="chapterTitle" minlength="4" maxlength = "50">
-        </p>
+          <input type="text" placeholder="Title" formControlName="chapterTitle" minlength="4" maxlength = "50">
+       <!--
       
-        <div *ngIf="isSubmitted && formControls.chapterTitle.errors" class="help-block">
+        <div *ngIf="formControls.chapterTitle.errors" class="help-block">
             <div *ngIf="formControls.chapterTitle.errors.required">Chapter title is required</div>
         </div> 
-        -->
+      --> 
       <!--Quill Text Editor-->
         <h5>Content</h5>
-        <quill-editor [style] = "editorStyle" formControlName = "editor"></quill-editor>
+        <quill-editor [style] = "editorStyle" [modules] = config formControlName = "editor"></quill-editor>
 
         <input type ="submit" value = "Create Chapter">
       </form>
