Got http get request to work for login
login button now gets all users and displays them in the console. needed to add the subscribe at the end of sequalize command. Post still doesn't work because of the need for them to be json objects

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -21,7 +21,7 @@
         
     </div>
 
-    <form [formGroup]="registerForm" (ngSubmit)="register()">
+    <form [formGroup]="registerForm" (ngSubmit)="createUser()">
         <div class="row">
             <label class="col-sm-2 offset-sm-1" for="username">Username:</label>
             <div class="col-sm-7">
