--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="getUsers()">
       <div class="row">
         <label class="col-sm-2 offset-sm-1" for="username">Username:</label>
         <div class="col-sm-7">
