--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -17,7 +17,7 @@
         <label class="col-sm-2 offset-sm-1" for="username">Username:</label>
         <div class="col-sm-7">
             <input type="username" formControlName="username">
-          <div *ngIf="formControls.username.touched && formControls.username.errors" class="help-block">
+          <div *ngIf="formControls.username.touched && formControls.username.errors || isSubmitted" class="help-block">
             <p *ngIf="formControls.username.errors.required">Username is required</p>
           </div>
         </div>
@@ -27,7 +27,7 @@
           <label class="col-sm-2 offset-sm-1" for="email">Password:</label>
           <div class="col-sm-7">
               <input type="password" formControlName="password">
-            <div *ngIf="formControls.password.touched && formControls.password.errors" class="help-block">
+            <div *ngIf="formControls.password.touched && formControls.password.errors || isSubmitted" class="help-block">
               <p *ngIf="formControls.password.errors.required">Password is required</p>
             </div>
           </div>
