--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,19 @@
-<p>
-  user-profile works!
-</p>
+<div id="dashboard" class="container-fluid">
+
+  <div class="row">
+      <img class="img-fluid rounded mx-auto d-block" src="../../../assets/profile.jpg">
+
+        <h3>Welcome, Emerson!</h3>
+
+  </div>
+
+  <h4><small>Bio</small></h4>
+  <div class="row">
+    <div class="round-box col-8">
+      <p>Some text</p>
+    </div>
+  </div>
+
+
+
+</div>
