--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,5 +1,4 @@
 <div id="login" class="container-fluid" align="center">
-
     <div class="row" align="center">
         <div class="col-5">
             <a routerLink="/login">Login</a>
@@ -12,29 +11,35 @@
         </div>
     </div>
 
-    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="signin()">
+    <br>
+    <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
       <div class="row">
-        <label class="col-sm-2 offset-sm-1" for="username">Username:</label>
-        <div class="col-sm-7">
-            <input type="username" formControlName="username">
-          <div *ngIf="formControls.username.touched && formControls.username.errors || isSubmitted" class="help-block">
-            <p>Username is required</p>
+        <div class="col-md-6 offset-md-3">
+          <div class="col-8">
+              <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+              <div *ngIf="f.username.errors.required">Username is required</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 offset-md-3">
+          <br>
+          <div class="col-8">
+              <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+              </div>
           </div>
         </div>
       </div>
-
-      <div class="row">
-          <label class="col-sm-2 offset-sm-1" for="email">Password:</label>
-          <div class="col-sm-7">
-              <input type="password" formControlName="password">
-            <div *ngIf="formControls.password.touched && formControls.password.errors || isSubmitted" class="help-block">
-              <p>Password is required</p>
-            </div>
-          </div>
-      </div>
       
+      <br>
       <div class="row justify-content-center">
-        <button id="submit" class="btn btn-primary" type="submit">Login</button>
+        <button [disabled]="loading" class="btn btn-primary" type="submit">Login</button>
       </div>
+
+      <br>
     </form>
   </div>
