--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -11,17 +11,17 @@
                 </div>
             </div>
 
-    <div id="avatar" class="row">
-        <div class="col-6 col-sm-3">
-            <label for="image-upload">
-                <img [src]="netImage" alt="avatar"> 
-            </label>
-            <input id="image-upload" type="file" accept="image/*" (change)="onFileSelected($event)">
-        </div>    
-        
-    </div>
 
     <form [formGroup]="registerForm" (ngSubmit)="signup()">
+        <div id="avatar" class="row">
+            <div class="col-6 col-sm-3">
+                <label for="image-upload">
+                    <img [src]="netImage" alt="avatar"> 
+                </label>
+                <input formControlName="profileImage" id="image-upload" type="file" accept="image/*" (change)="onFileSelected($event)">
+            </div>    
+        </div>
+
         <div class="row">
             <label class="col-sm-2 offset-sm-1" for="username">Username:</label>
             <div class="col-sm-7">
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <button class="btn btn-primary" type="submit" [disabled]="registerForm.invalid">Register</button>
+            <button class="btn btn-primary" type="submit" >Register</button>
         </div>
     </form>
 </div>
