--- a/src/app/components/story-page/story-page.component.html
+++ b/src/app/components/story-page/story-page.component.html
@@ -1,25 +1,27 @@
 <div id="story-page" class="container-fluid">
   <br>
-  <div id="book" class="row">
+  <div *ngIf="story" id="book" class="row">
 
       <div class="col-sm-5">
-          <img class="img-fluid" src="../assets/bookcover.jpg" alt="book-artwork">
-        <div id="ratings" class="row float-right">
-            <i class="fa fa-thumbs-o-up"> 123</i>
-            <i class="fa fa-thumbs-o-down"> 23</i>
+        <div class="row">
+          <img class="img-fluid" [src]="story.coverImage" alt="book-artwork">
         </div>
-        
+        <div class="row">
+          <div id="ratings" class="row float-right">
+              <i (click)=upVote class="fa fa-thumbs-o-up"> {{story.likes}}</i>
+              <i class="fa fa-thumbs-o-down"> {{story.dislikes}}</i>
+          </div>
+        </div>
       </div>
 
       <div id="book-information" class="col-sm-7">
         <div class="container">
-          <p class="h4">The Martian</p>
+          <p class="h4">{{story.title}}</p>
           <p class="h5">Andy Weir</p>
           <br>
           <br>
           <p class="h6">summary:</p>
-          <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
-          </p>
+          <p>{{story.summary}}</p>
           <br>
           <p class="h6">tags:</p>
           <p>stuff, thriller, action, etc</p>
